# fantasy4x

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  clean.sh  deprecated_mkfile  init_build_system.cmake  mk.sh  source.txt
assets/: contact.txt
cb_win_project/: fantasy4x.cbp  fantasy4x.depend  fantasy4x.layout
include/: api.hpp  cmn_data.hpp  colors.hpp  input.hpp  io.hpp  lib_wrap.hpp  mon.hpp  render.hpp  script.hpp  state.hpp  ui.hpp  utils.hpp  world.hpp
res/scripts/: render.lua
resources/fonts/: alagard.txt  terminus.fon
scripts/: ui.lua
src/: actor.c  actor.cpp  actor.h  actor.hpp  api.c  api.cpp  api.h  api.hpp  base.h  base.hpp  cmn_data.c  cmn_data.cpp  cmn_data.h  cmn_data.hpp  cmn_types.c  cmn_types.h  cmn_utils.c  cmn_utils.cpp  cmn_utils.h  cmn_utils.hpp  colors.c  colors.cpp  colors.h  file_handling.c  file_handling.h  file_io.cpp  file_io.hpp  input.c  input.cpp  input.h  input.hpp  input.rs  io.cpp  lib_wrap.cpp  list.c  list.h  main.c  main.cpp  main.rs  mon.cpp  (+15 more)
src/debug_mode/: target_mode.h
src/release_mode/: target_mode.h
tools/: drmemory.bat
